--- a/personal.htm
+++ b/personal.htm
@@ -47,15 +47,13 @@ Academy Professor</span><span lang="EN-US" style="font-family: Times New Roman; 
 with Academy Finland and </span>
 </font><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">with the Center for Machine Vision and Signal Analysis 
-(CMVS), University of Oulu, Finland<span lang="en-us">, and visiting professor 
-with Aalto University and Stanford University</span>. She has been a </span>
+(CMVS), University of Oulu, Finland, and a PI with ELLIS Institute Finland. She has been a </span>
 <span style="font-family: Times New Roman; font-weight: 700">full professor</span><span style="font-family: Times New Roman; font-weight: normal"> 
 (tenured, from 2017) with CMVS, where she was a senior researcher (2005-2007), Academy postdoctoral 
 researcher (2008-2011), </span>
 <span style="font-family: Times New Roman; font-weight: 700">Academy research fellow</span><span style="font-family: Times New Roman; font-weight: normal"> (2011-2017) and Associate 
 Professor (tenure track, 2014-2017). She received the Ph.D. degree in computer science from the 
-Chinese Academy of Sciences, Beijing, China, in 2005.&nbsp; <span lang="en-us">
-She got the Academy Postdoctoral position in 2007, </span>was selected in 2011 
+Chinese Academy of Sciences, Beijing, China, in 2005.&nbsp;<span lang="en-us">She got the Academy Postdoctoral position in 2007, </span>was selected in 2011 
 to the highly competitive Academy Research Fellow position, in 2020 selected to Prestigious Academy Professor position, 
 in 2022 elected to a </span>
 <span style="font-family: Times New Roman; font-weight: 700">member </span>
@@ -63,12 +61,12 @@ in 2022 elected to a </span>
 and in 2023 elected to a </span>
 <span style="font-family: Times New Roman; font-weight: 700"> member of Academia 
 Europaea</span><span style="font-family: Times New Roman; ">.</span><span style="font-family: Times New Roman; font-weight: normal"> She has 
-authored or co-authored more than <span lang="en-us">350</span> papers in journals and conferences, and 
+authored or co-authored more than <span lang="en-us">370</span> papers in journals and conferences, and 
 has served </span> </font>
 <span style="font-family: Times New Roman; font-weight: normal"><font size="4">
 as a reviewer for many journals and conferences. Her papers have currently over 
-328<span lang="en-us">00</span> citations in Google Scholar 
-(h-index 89). She i</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">s
+359<span lang="en-us">30</span> citations in Google Scholar 
+(h-index 91). She i</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">s
 <span style="font-weight: normal; font-family: Times New Roman">&nbsp;</span></span><span style="font-family: Times New Roman; font-weight: 700">Associate 
 Editor in Chief</span><span style="font-family: Times New Roman; font-weight: normal"> for Computer Vision and Image Understanding (CVIU) 
 and general co-chair for ACII 2025 and CVIP 2025. She was </span><b>
