--- a/publications.htm
+++ b/publications.htm
@@ -159,36 +159,49 @@ was reported on YLE TV1 Prisma in Feb. 7th, 2007</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2026</b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;3<span lang="fi">7</span>4. Marko Savic, <b>Guoying Zhao</b>.
+<font face="Times New Roman" size="4">&nbsp;</font><font size="4">376. Mark</font><font face="Times New Roman" size="4">o Savic, <b>Guoying Zhao</b>.
 Oulu Remote-photoplethysmography Presentation Attacks Database (OR-PAD). 
 International Journal of Computer Vision (IJCV), 2026.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<span lang="fi"><font size="4">&nbsp;</font></span><font face="Times New Roman" size="4">373.<span lang="fi">
+<span lang="fi"><font size="4">&nbsp;</font></span><font face="Times New Roman" size="4">375.<span lang="fi">
 </span>Mengting Wei, Xingxun Jiang, Haoyu Chen, Yante Li, <b>Guoying Zhao</b>. 
 LatentMag: Self-Supervised 3D Magnification for Micro Expressions via Latent 
 Extrapolation<span lang="fi">.</span> IEEE Transactions on Affective Computing<span lang="fi">. 
 2026.</span></font></p>
+<div class="note-authors">
+	<p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
+	<font face="Times New Roman" size="4">&nbsp;374. Bohao Xing, Xin Liu, <b>
+	Guoying Zhao</b>, Cheng</font><font face="Times New Roman" size="4">yu Liu, 
+	Xiaolan Fu, Heikki K&auml;lvi&auml;inen. EmotionHallucer: Evaluating Emotion 
+	Hallucinations in Multimodal Large Language Models.</font><font face="Times New Roman" size="4"> 
+	International Conference on Learning Representations (ICLR), 2026. 
+	(Acceptance rate: 28%)</font></div>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;372. Hui Kuurila-Zhang, Haoyu Chen, <b>Guoying Zhao</b>. 
+<font size="4">&nbsp;373. Hui Kuurila-Zhang, Haoyu Chen, <b>Guoying Zhao</b>. 
 Evaluating the Adversarial Robustness of Vision-Language Models for Facial 
 Expression Recognition. IEEE Intelligent Systems. 2026.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<span lang="fi"><font size="4">&nbsp;</font></span><font face="Times New Roman" size="4">371. Yang Merik Liu, Adam Turnbull, Ehsan Adeli, <b>Guoying Zhao</b>, Kuan Hong Wang, F. 
+<span lang="fi"><font size="4">&nbsp;</font></span><font face="Times New Roman" size="4">372. Yang Merik Liu, Adam Turnbull, Ehsan Adeli, <b>Guoying Zhao</b>, Kuan Hong Wang, F. 
 Vankee Lin. A Multi-Dimensional Transfer Learning Framework for Studying 
 Reward-Guided Behaviors Across Species. Nature Mental Health. 
 <span lang="fi">2026 </span>(in press)
 </font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;370. <font face="Times New Roman">Ruize Wu, Wei Zhuo, 
+<font size="4">&nbsp;371. <font face="Times New Roman">Ruize Wu, Wei Zhuo, 
 Jingang Shi, Xin Liu, Linlin Shen, Yihong Gong, <b>Guoying Zhao</b>. HemNet: 
 Hemoglobin-Assistant Network for Video-based Remote Photoplethysmography 
 Measurement. IEEE Transactions on Circuits and Syst</font></font><font face="Times New Roman" size="4">ems 
 for Video Technology. 2026.</font></p>
 <p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4"><span lang="fi">&nbsp;</span>369. Xingyu Liu, Yan Jiang, Xu Cheng, Hao 
+<font face="Times New Roman" size="4"><span lang="fi">&nbsp;</span>370. Xingyu Liu, Yan Jiang, Xu Cheng, Hao 
 Yu, Haoyu Chen, <b>Guoying Zhao</b>. CROMBO: Cross-Modality Bootstrapping for 
 Unified Sketch-Photo Representation Learning. ACM Transactions on Multimedia 
 Computing Communications and Applications. 2026.</font></p>
+<p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
+<font size="4">&nbsp;369. Zhongtian He, Shuyang Chu, Xuqi Li, Zhengdong Jiang, 
+Jian Xu, <b>Guoying Zhao</b>, Jingang Shi. ResoPhys: Unsupervised Plug-and-Play 
+Remote Physiological Measurement via Facial Videos of Arbitrary Resolution. IEEE 
+Journal of Biomedical and Health Informatics. 2026.</font></p>
 <p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
 <font face="Times New Roman" size="4">&nbsp;368. Ali Salar, Qing Liu, <b>Guoying 
 Zhao</b>. Controllable Localized Face Anonymization Via Diffusion Inpainting. 
