--- a/teammembers.htm
+++ b/teammembers.htm
@@ -37,7 +37,7 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Qianru.jpg" width="153" height="150"></td>
 		<td height="0" align="center" valign="top" width="232">
-		<img border="0" src="Yante.jpg"></td>
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="188">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="184">
@@ -213,7 +213,7 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="188">
-		<img border="0" src="Mark.jpg" width="168" height="161"></td>
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="232">
@@ -225,26 +225,11 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="188">
-		<b><span lang="zh-cn">Mr. </span>Mark<span lang="zh-cn"> </span>Adamik</b>
-		<p>&nbsp;</p>
-		<p style="text-align: center"><span lang="zh-cn">Doctoral researcher</span></p>
-		<h3 class="LC20lb MBeuO DKV0Md">
-		<span data-huuid="9982943759158199878" style="font-weight: 400">
-		<font size="3">Vrije Universiteit Amsterdam</font></span></h3>
-		<h3 class="LC20lb MBeuO DKV0Md">
-		<span data-huuid="9982943759158199878">
-		<font size="3"><span style="font-weight: 400">Sep. - Dec. 2025</span></font></span></h3>
-		<p>&nbsp;</td>
+		<p style="text-align: center">Ms. Thandar Phyo<p style="text-align: center">
+		<span lang="zh-cn">P</span>hD student from Chiang Mai University<p>&nbsp;Nov. 
+		2025 – Jun. 2026.</td>
 		<td height="0" align="center" valign="top" width="225">
-		<span lang="zh-cn"><b><font face="Times New Roman">Mr</font></b></span><b><font face="Times New Roman"><span lang="zh-cn">. </span>Luu Tu 
-		Nguyen</font></b><p><span lang="zh-cn"><b>&nbsp;&nbsp; </b></span></p>
-		<p style="text-align: left"><span lang="zh-cn"><b>&nbsp;&nbsp;Visiting researcher</b></span></p>
-		<p>&nbsp;</p>
-		<p><span data-teams="true">VNU University of Engineering and Technology</span><p>&nbsp;<h3 class="LC20lb MBeuO DKV0Md">
-		<mark class="QVRyCf">
-		<span data-huuid="9982943759158199878">
-		<font size="3"><span style="font-weight: 400">Aug. - Dec. 2025</span></font></span></mark></h3>
-		<p>&nbsp;</td>
+		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="232">
 		&nbsp;</td>
 		<td height="0" align="center" valign="top" width="188">
@@ -256,6 +241,16 @@ span.contentpasted0
 <p class="title" style="margin-top:1cm; margin-bottom:9pt">
 <font size="4"><b><span lang="zh-cn">A</span>lumni:</b></font></p>
 <table border="0" width="40%">
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Yante.jpg"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<p style="text-align: center">&nbsp;</p>
+		<p style="text-align: center"><b>Dr. Yante Li</b></p>
+		<p style="text-align: center">&nbsp;</p>
+		<p style="text-align: center">Associate Professor </p>
+		<p style="text-align: center">Chinese Academy of Agricultural Sciences</td>
+	</tr>
 	<tr>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Marko.jpg"></td>
@@ -272,7 +267,8 @@ span.contentpasted0
 		<p style="text-align: center">&nbsp;</p>
 		<p style="text-align: center"><span lang="en-us">Associate </span>
 		Professor</p>
-		<p style="text-align: center"><span lang="zh-cn">Xidian University</span></td>
+		<p style="text-align: center"><font face="Times New Roman">Northwestern 
+		Polytechnic University<span lang="zh-cn">, China</span></font></td>
 	</tr>
 	<tr>
 		<td width="226" height="0" align="center" valign="top">
@@ -364,16 +360,17 @@ span.contentpasted0
 		<td width="243" height="0" align="center" valign="top">
 		<img border="0" src="Henglin.jpg" width="130" height="141"></td>
 		<td height="0" align="center" valign="top" width="397">
-		<b><font face="Times New Roman">Dr. H</font></b><font face="Times New Roman"><b>englin S<span lang="zh-cn">hi</span></b></font><p>&nbsp;</p>
-		<p style="text-align: center"><span lang="zh-cn">Postdoctoral researcher</span></p>
-		<p style="text-align: center"><span lang="zh-cn">KTH, Sweden</span></p></td>
+		&nbsp;<p style="text-align: center"><b><font face="Times New Roman">Dr. H</font></b><font face="Times New Roman"><b>englin S<span lang="zh-cn">hi</span></b></font></p>
+		<p>&nbsp;</p>
+		<p style="text-align: center">Assistant Professor, Linköping University<span lang="zh-cn">, Sweden</span></p></td>
 	</tr>
 	<tr>
 		<td width="243" height="0" align="center" valign="top">
 		<p align="left" style="text-align: center">
 		<img border="0" src="Kevin.jpg" width="149" height="148"></td>
 		<td height="0" align="center" valign="top" width="397">
-		<b>Dr. Kevin Cheng</b><p>&nbsp;</p>
+		&nbsp;<p style="text-align: center"><b>Dr. Kevin Cheng</b></p>
+		<p>&nbsp;</p>
 		<p><span lang="zh-cn">Senior lecturer, Hame University of Applied 
 		Sciences, Finland</span></td>
 	</tr>
@@ -381,9 +378,9 @@ span.contentpasted0
 		<td width="243" height="0" align="center" valign="top">
 		<img border="0" src="Wei.jpg" width="140" height="142"></td>
 		<td height="0" align="center" valign="top" width="397">
-		<b><span lang="en-us">Dr. Wei Peng</span></b><p><span lang="en-us">&nbsp;</span></p>
-		<p style="text-align: center"><span lang="en-us">Postdoctoral researcher</span></p>
-		<p style="text-align: center"><span lang="en-us">&nbsp;</span>Stanford University<span lang="zh-cn">, USA</span></td>
+		&nbsp;<p style="text-align: center"><b><span lang="en-us">Dr. Wei Peng</span></b></p>
+		<p><span lang="en-us">&nbsp;</span></p>
+		<p style="text-align: center"><span lang="en-us">&nbsp;</span><span lang="zh-cn">Meta, USA</span></td>
 	</tr>
 	<tr>
 		<td width="243" height="0" align="center" valign="top">
@@ -518,6 +515,33 @@ span.contentpasted0
 <p class="title" style="line-height: 150%">
 <font face="Times New Roman" size="4"><b>Past visiting researchers:</b></font></p>
 <table border="0" width="40%">
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="397">
+		<span lang="zh-cn"><b><font face="Times New Roman">Mr</font></b></span><b><font face="Times New Roman"><span lang="zh-cn">. </span>Luu Tu 
+		Nguyen</font></b><p><span lang="zh-cn"><b>&nbsp;&nbsp; </b></span></p>
+		<p style="text-align: center"><span lang="zh-cn"><b>&nbsp;&nbsp;Visiting researcher</b></span></p>
+		<p>&nbsp;</p>
+		<p><span data-teams="true">VNU University of Engineering and Technology</span><h3 class="LC20lb MBeuO DKV0Md">
+		<mark class="QVRyCf">
+		<span data-huuid="9982943759158199878">
+		<font size="3"><span style="font-weight: 400">Aug. - Dec. 2025</span></font></span></mark></h3></td>
+	</tr>
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		<img border="0" src="Mark.jpg" width="168" height="161"></td>
+		<td height="0" align="center" valign="top" width="397">
+		<b><span lang="zh-cn">Mr. </span>Mark<span lang="zh-cn"> </span>Adamik</b>
+		<p>&nbsp;</p>
+		<p style="text-align: center"><span lang="zh-cn">Doctoral researcher</span></p>
+		<h3 class="LC20lb MBeuO DKV0Md">
+		<span data-huuid="9982943759158199878" style="font-weight: 400">
+		<font size="3">Vrije Universiteit Amsterdam</font></span></h3>
+		<h3 class="LC20lb MBeuO DKV0Md">
+		<span data-huuid="9982943759158199878">
+		<font size="3"><span style="font-weight: 400">Sep. - Dec. 2025</span></font></span></h3></td>
+	</tr>
 	<tr>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Jens.jpg" width="119" height="162"></td>
